[project]
name = "aqualog-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi==0.115.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "slowapi==0.1.9",
    "uvicorn[standard]==0.30.6",
]
